# PortfolioPilot

./: .env  .env.example  .gitignore  README.md  db_setup.md  docker-compose.yml  main.py  project_structure.md  pyproject.toml
.cursor/rules/backend/: backend-core.mdc  backend-routers.mdc  backend-tests.mdc
.cursor/rules/frontend/: frontend-components.mdc  frontend-core.mdc  frontend-data.mdc
backend/: Dockerfile  MIGRATIONS.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements-docker.txt  test_results.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_pgvector_setup.py
backend/reports/: junit-report.xml  test_results.txt
backend/src/: main.py
backend/src/agents/: anthropic_client.py  antropic_client.py  client.py  gemini_client.py  general_model_client.py  openai_client.py
backend/src/core/: __init__.py  config.py  database.py
backend/src/core/models/: __init__.py
backend/src/data/: data_base_extractor.py  data_collector.py  data_pydentic.py
backend/tests_backend/: conftest.py  test_data_pydentic.py  test_gemini_client.py  test_open_ai.py
backend/tests_backend/agents/: test_anthropic_client.py  test_gemini_client.py
backend/tests_backend/data/: test_data_collector.py
db/: __init__.sql
docs/: data_spec.md
src/agents/: base.py
tests/: test_paths.py
