[project]
name = "portfoliopilot"
version = "0.1.1"
description = "AI Agent for portfolio management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Google Cloud Platform (GCP) ---
    "google-cloud-storage>=2.18.0", # Object Storage (Documents, Logs)
    "google-cloud-bigquery>=3.25.0", # Data Warehouse (Portfolio Data)
    "google-cloud-aiplatform>=1.70.0", # Vertex AI (Model Training, Vector Search)
    "db-dtypes>=1.3.0", # REQUIRED for BigQuery -> Pandas conversion
    # --- Direct LLM SDKs (Low-Level Access) ---
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "google-generativeai>=0.8.3", # Gemini (API Key / AI Studio version)
    # --- Agentic Framework (LangChain Ecosystem) ---
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-google-genai>=2.0.0", # Integration for Gemini API
    "langchain-google-vertexai>=2.0.0", # Integration for Vertex AI (Enterprise Gemini)
    "langchain-huggingface>=0.1.0",
    # --- Deep Learning (Torch & Hugging Face) ---
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "tokenizers>=0.22.1",
    "huggingface-hub>=0.25.0",
    "accelerate>=0.34.0",
    # --- Basic ML Kit ---
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    # --- Database & Memory ---
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.0",
    "langchain-postgres>=0.0.12",
    "alembic>=1.13.0", # Database migrations
    # --- Testing & Evaluation ---
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "deepeval>=1.0.0",
    # --- Utilities ---
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0", # The logging library
    "rich>=13.9.0", # Pretty-print for local development
    "yfinance>=0.2.66",
    "sqlalchemy>=2.0.44",
    "dataclasses>=0.8",
]



[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests_backend"]
python_files = "test_*.py"
pythonpath = ["src"]

[tool.uv]
package = true
